# ai-service2

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  health.py  optimization.py
app/core/: config.py  security.py
app/middleware/: error_handler.py  logging.py
app/schemas/: common.py
app/services/: tour_optimizer.py
